--- a/src/assets/scss/now-ui-kit.scss
+++ b/src/assets/scss/now-ui-kit.scss
@@ -61,4 +61,7 @@
 @import "now-ui-kit/responsive";
 
 // React
-@import "react/react-differences"
+@import "react/react-differences";
+
+@import "pages/home/index.scss";
+@import "pages/login/loginPage.scss";
